1999-03-14  Torbjorn Granlund  <tege@matematik.su.se>

	* mpz/tests/reuse.c: Also test mpz_invert and mpz_divexact.

	* mpz/tests/convert.c: Update to GMP 2 variable syntax.

1999-03-13  Torbjorn Granlund  <tege@matematik.su.se>

	* mpf/README: New file.
	* mpz/README: New file.

	* mpf/pow_ui.c: New file.
	* mpf/Makefile.in: Compile pow_ui.c.
	* make.bat: Likewise.
	* gmp.h (mpf_pow_ui): Declare.

1999-03-12  Torbjorn Granlund  <tege@matematik.su.se>

	* mpn/configure.in: Stage 1 of rewrite.
	* mpn/underscore.h: New name for bsd.h.
	* mpn/sysv.h: Deleted.

	* mpn/m68k/*: Don't include sysdep.h.

1999-03-11  Torbjorn Granlund  <tege@matematik.su.se>

	* mpn/powerpc32/add_n.S: Add support for both AIX and ELF syntax.
	Renamed from `.s'.
	* mpn/powerpc32/sub_n.S: Likewise.
	* mpn/powerpc32/lshift.S: Likewise.
	* mpn/powerpc32/rshift.S: Likewise.
	* mpn/powerpc32/mul_1.S: Likewise.
	* mpn/powerpc32/addmul_1.S: Likewise.
	* mpn/powerpc32/submul_1.S: Likewise.

	* mpn/powerpc32/umul.S: New file.
	* mpn/sparc32/v8/umul.S: New file.
	* mpn/sparc32/umul.S: New file.
	* mpn/x86/umul.S: New file.
	* mpn/x86/udiv.S: New file.

	* mpn/Makefile.in (mul_basecase.o): Delete rule.

1999-02-22  Torbjorn Granlund  <tege@matematik.su.se>

	* configure.in (hppa2.0*-*-*): Force use of GCC.

	* extract-dbl.c: Handle IEEE denormalized numbrs.  Clean up.

1998-12-02  Torbjorn Granlund  <tege@matematik.su.se>

	* mpn/Makefile.in (CCAS): New macro.
	(.s.o): Use CCAS.
	(.S.o): Likewise.

	* mpn/Makefile.in (mul_basecase.o): Add dependency.
	(sqr_basecase.o): Likewise.
	(mod_1.o): Likewise.

	* demos/pexpr.c (cputime): Test also __hpux.
	(cleanup_and_exit): Check SIGXCPU only #ifdef LIMIT_RESOURCE_USAGE.

	* mpz/tests/t-2exp.c: Use urandom, not random.

	* mpn/configure.in (arm*-*-*): New alternative.

1998-11-30  Torbjorn Granlund  <tege@matematik.su.se>

	* gmp-impl.h (union ieee_double_extract): Special case for
	little-endian arm.
	(LIMBS): Alias for PTR.
